tests/errors/papercut/read-missing-write-comb.futil
import "primitives/core.futil";
import "primitives/memories/comb.futil";

component main() -> () {
  cells {
    mem = comb_mem_d1(32, 1, 1);
    eq = std_add(32);
    r = std_reg(1);
  }
  wires {
    comb group check {
      eq.left = mem.read_data;
      eq.right = 32'd1;
    }
    group incr {
      r.in = 1'd1;
      r.write_en = 1'd1;
      incr[done] = r.done;
    }
  }
  control {
    if eq.out with check {
      incr;
    }
  }
}
